refactor(webpack/react): add webpack builder and react

--- a/src/styles/radar.css
+++ b/src/styles/radar.css
@@ -17,3 +17,15 @@ td {
   vertical-align: top;
   padding-right: 60px;
 }
+
+.entry-tag {
+  padding: 5px;
+  margin: 1px;
+  background-color: silver;
+}
+
+.entry-tag-selected {
+  padding: 5px;
+  margin: 1px;
+  background-color: darkorange;
+}
