--- a/src/styles/radar.css
+++ b/src/styles/radar.css
@@ -1,3 +1,4 @@
+/*
 body {
   font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
   padding-bottom: 50px;
@@ -17,8 +18,8 @@ td {
   vertical-align: top;
   padding-right: 60px;
 }
-
-.entry-tag {
+*/
+/* .entry-tag {
   padding: 5px;
   margin: 1px;
   background-color: silver;
@@ -28,4 +29,4 @@ td {
   padding: 5px;
   margin: 1px;
   background-color: darkorange;
-}
+} */
