feat(text): add social links & text tuning

--- a/src/styles/radar.css
+++ b/src/styles/radar.css
@@ -1,32 +1,3 @@
-/*
-body {
-  font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
-  padding-bottom: 50px;
+.social-icon {
+  padding: 2px;
 }
-h3 {
-  margin-top: 50px;
-}
-li {
-  margin: 25px 50px 0 0;
-}
-table {
-  width: 1400px;
-  margin: 0 50px 0 50px;
-}
-td {
-  width: 50%;
-  vertical-align: top;
-  padding-right: 60px;
-}
-*/
-/* .entry-tag {
-  padding: 5px;
-  margin: 1px;
-  background-color: silver;
-}
-
-.entry-tag-selected {
-  padding: 5px;
-  margin: 1px;
-  background-color: darkorange;
-} */
